kubernetes/apps/anime/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: anime-v2
  name: anime-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: "Host(`anime.kalexlab.xyz`) && PathPrefix(`/api`)"
      services:
        - name: api
          port: 3000
    - kind: Rule
      match: "Host(`anime.kalexlab.xyz`)"
      services:
        - name: web
          port: 80
  tls:
    secretName: anime-ingress-certificate-secret
